--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.3.8",
     "tsc": "^2.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
