--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.2",
     "styled-components": "^5.3.8",
