--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           server: ${{ secrets.ftp_host }}
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /tatimodena.com.br/reactapp
+          server-dir: /tatimodena.com.br/reactapp/
           exclude: |
             **/.git*
             **/.git*/**
