[deploy] github actions + hostgator

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
-          mv build/* .
+          mv build/* ../public_html/
           rm -rf build/
 
       - name: 📂 Sync files
