--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,10 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
-          mkdir -p ../public_html
-          mv build/* ../public_html/
+          rm -rf ./public
+          rm -rf ./src
+          find ./ -type f -delete
+          mv build/* ./
           rm -rf build/
 
       - name: 📂 Sync files
@@ -32,7 +34,7 @@ jobs:
           server: ${{ secrets.ftp_host }}
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /tatimodena.com.br/reactapp/
+          server-dir: /tatimodena.com.br/public_html/
           exclude: |
             **/.git*
             **/.git*/**
