--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
-          find . ! -name 'build' -delete
+          rm -rf !(build)
           mv build/* ./
           rm -rf build
 
