[deploy] github actions + hostgator #020

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,9 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
-          find ./ -type f ! -name 'build' ! -name 'public' ! -name 'src' -delete # Remove arquivos da pasta raiz, exceto build, public e src
-          rm -rf public/*                     # Remove arquivos da pasta public
-          rm -rf src/*                        # Remove arquivos da pasta src
-          mv build/* ./                       # Move os arquivos da pasta build para a pasta raiz
-          rm -rf build/                       # Remove a pasta build
+          find ./ -type f ! -name 'build' -delete # Remove arquivos da pasta raiz, exceto build, public e src
+          mv build/* ./                           # Move os arquivos da pasta build para a pasta raiz
+          rm -rf build/                           # Remove a pasta build
 
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
