--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
-          rm -rf public/*                     # Remove arquivos da pasta public
-          rm -rf src/*                        # Remove arquivos da pasta src
-          mv build/* ./                       # Move os arquivos da pasta build para a pasta raiz
-          rm -rf build/                       # Remove a pasta build
+          rm -rf public/                    # Remove arquivos da pasta public
+          rm -rf src/                       # Remove arquivos da pasta src
+          mv build/* ./                     # Move os arquivos da pasta build para a pasta raiz
+          rm -rf build/                     # Remove a pasta build
 
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
@@ -33,7 +33,7 @@ jobs:
           server: ${{ secrets.ftp_host }}
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /tatimodena.com.br/public_html/
+          server-dir: /tatimodena.com.br/
           exclude: |
             **/.git*
             **/.git*/**
