--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,10 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run build
-          rm -rf public/                    # Remove arquivos da pasta public
-          rm -rf src/                       # Remove arquivos da pasta src
-          mv build/* ./                     # Move os arquivos da pasta build para a pasta raiz
+          rm -rf ./*                        # Remove arquivos da pasta raiz
+          rm -rf public/                    # Remove a pasta public
+          rm -rf src/                       # Remove a pasta src
+          mv build/* ./                     # Move todos os arquivos da pasta build para a pasta raiz
           rm -rf build/                     # Remove a pasta build
 
       - name: 📂 Sync files
